fin de challenge6

--- a/index.html
+++ b/index.html
@@ -5,9 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Challenge6</title>
+    <link href='https://www.google.com/fonts#UsePlace:use/Collection:Oswald:300' rel='stylesheet' type='text/css'>
     <link href="bootstrap/css/bootstrap.css" type="text/css" rel="stylesheet">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
     <link href="css/style.css" type="text/css" rel="stylesheet">
+    <link href='https://www.google.com/fonts#UsePlace:use/Collection:Oswald:300' rel='stylesheet' type='text/css'>
+
+
   </head>
 <body>
   <div class="container-fluid">
@@ -20,8 +24,8 @@
     <div class="row">
       <div class="col-md-10 col-md-offset-1">
         <nav class="navbar navbar-info" role="navigation">
-          <div class="collapse navbar-collapse navbar-ex2-collapse">
-            <ul class="nav navbar-nav navbar-auto  text-center">
+          <div class="collapse navbar-collapse navbar-ex2-collapse text-center-md">
+            <ul class="nav navbar-nav navbar-auto">
               <li class="active"><a href="#">HOMEPAGE</a></li>
               <li class="active"><a href="#">THREE COLUMN</a></li>
               <li class="active"><a href="#">TWO COLUMN #1</a></li>
@@ -35,7 +39,10 @@
 
     <div class="row">
       <div class="img-header">
-      <div class="col-md-10 col-md-offset-1"><img src="image/pics01.jpg" alt="" class="img-responsive"></div>
+      <div class="col-md-10 col-md-offset-1">
+        <!-- <img src="image/fond.png" alt="" class="img-responsive imagedessous"> -->
+        <div class="imagedessous"><img src="image/pics01.jpg" alt="" class="img-responsive imagedessus center-block"></div>
+      </div>
       </div>
     </div>
   </header>
@@ -43,45 +50,45 @@
 
   <div class="row">
     <div class="col-md-3">
-      <div>
+      <div class="fourarticles">
         <div>
           <h3>Image 1</h3>
           <p class="bold">Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus.</p>
           <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus.</p>
-          <p><a href="#" class="btn btn-primary">Button</a></p>
+          <p><a href="#" class="btn btn-primary">More</a></p>
         </div>
       </div>
     </div>
 
     <div class="col-md-3">
-      <div>
+      <div class="fourarticles">
         <div>
           <h3>Image 2</h3>
           <p class="bold">Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus.</p>
           <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus.</p>
-          <p><a href="#" class="btn btn-primary">Button</a></p>
+          <p><a href="#" class="btn btn-primary">More</a></p>
         </div>
       </div>
     </div>
 
     <div class="col-md-3">
-      <div>
+      <div class="fourarticles">
         <div>
           <h3>Image 3</h3>
           <p class="bold">Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus.</p>
           <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus.</p>
-          <p><a href="#" class="btn btn-primary">Button</a></p>
+          <p><a href="#" class="btn btn-primary">More</a></p>
         </div>
       </div>
     </div>
 
     <div class="col-md-3">
-      <div>
+      <div class="fourarticles">
         <div>
           <h3>Image 1</h3>
           <p class="bold">Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus.</p>
           <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus.</p>
-          <p><a href="#" class="btn btn-primary">Button</a></p>
+          <p><a href="#" class="btn btn-primary">More</a></p>
         </div>
       </div>
     </div>
@@ -89,52 +96,53 @@
 
 
 
-  <div class="row">
+  <div class="row threearticles">
     <div class="col-md-4">
-      <div class="media thumbnail">
+      <div class="media thumbnail fondgris">
         <div class="media-left">
             <img class="media-object" alt="64x64" src="image/pics04.jpg">
         </div>
         <div class="media-body">
             <h4 class="media-heading">Image en haut à gauche</h4>
-            <p>Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin commodo. Cras purus odio, vestibulum in vulputate at, tempus viverra turpis. Fusce condimentum nunc ac nisi vulputate fringilla. Donec lacinia congue felis in faucibus.</p>
+            <p>Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin commodo.</p>
         </div>
       </div>
     </div>
 
+
     <div class="col-md-4">
-      <div class="media thumbnail">
+      <div class="media thumbnail fondgris">
         <div class="media-left">
           <img class="media-object" alt="64x64" src="image/pics06.jpg">
         </div>
         <div class="media-body">
             <h4 class="media-heading">Image en haut à gauche</h4>
-            <p>Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin commodo. Cras purus odio, vestibulum in vulputate at, tempus viverra turpis. Fusce condimentum nunc ac nisi vulputate fringilla. Donec lacinia congue felis in faucibus.</p>
+            <p>Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin commodo.</p>
         </div>
       </div>
     </div>
 
     <div class="col-md-4">
-      <div class="media thumbnail">
+      <div class="media thumbnail fondgris">
         <div class="media-right">
           <img class="media-object" alt="64x64" src="image/pics05.jpg">
         </div>
         <div class="media-body">
             <h4 class="media-heading">Image en haut à gauche</h4>
-            <p>Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin commodo. Cras purus odio, vestibulum in vulputate at, tempus viverra turpis. Fusce condimentum nunc ac nisi vulputate fringilla. Donec lacinia congue felis in faucibus.</p>
+            <p>Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin commodo.</p>
         </div>
     </div>
   </div>
 
-  <div class="row">
+  <div class="row troisiemepartie">
     <div class="col-md-6">
       <div class="row">
 
         <div class="col-md-12">
           <div>
-            <h3>Image 1</h3>
+            <h3>INTEGER GRAVIDA NIBH QUIS URNA</h3>
             <h4> Lorem ipsum dolor sit amet, consectetur adipisicing elit</h4>
-            <img src="image/pics03.jpg" alt="">
+            <img src="image/pics03.jpg" alt="" class="imagegauche">
             <div class="caption">
               <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus.Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
               <p><a href="#" class="btn btn-primary">Button</a></p>
@@ -150,22 +158,22 @@
       <div class="row">
         <div class="col-md-6">
           <h3>SIDEBAR1</h3>
-          <div class="sidebar1">
+          <div class="hr">
             <p class="btn btn-primary">OCTOBER 03</p>
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
           </div>
 
-          <div class="sidebar1">
+          <div class="hr">
             <p class="btn btn-primary">OCTOBER 03</p>
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
           </div>
 
-          <div class="sidebar1">
+          <div class="hr">
             <p class="btn btn-primary">OCTOBER 03</p>
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
           </div>
 
-          <div class="sidebar1">
+          <div>
             <p class="btn btn-primary">OCTOBER 03</p>
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
           </div>
@@ -173,23 +181,23 @@
         </div>
 
         <div class="col-md-6">
-          <h3>SIDEBAR2</h3>
+          <h3 class="h3sidebar2">SIDEBAR2</h3>
             <ul class="sidebar2">
-              <li><i class="fa fa-angle-right"></i><a href="#"> Lorem ipsum dolor sit amet</a></li>
-              <li><i class="fa fa-angle-right"></i><a href="#"> Lorem ipsum dolor sit amet</a></li>
-              <li><i class="fa fa-angle-right"></i><a href="#"> Lorem ipsum dolor sit amet</a></li>
-              <li><i class="fa fa-angle-right"></i><a href="#"> Lorem ipsum dolor sit amet</a></li>
-              <li><i class="fa fa-angle-right"></i><a href="#"> Lorem ipsum dolor sit amet</a></li>
+              <li class="hr"><i class="fa fa-angle-right"></i><a href="#"> Lorem ipsum dolor sit amet</a></li>
+              <li class="hr"><i class="fa fa-angle-right"></i><a href="#"> Lorem ipsum dolor sit amet</a></li>
+              <li class="hr"><i class="fa fa-angle-right"></i><a href="#"> Lorem ipsum dolor sit amet</a></li>
+              <li class="hr"><i class="fa fa-angle-right"></i><a href="#"> Lorem ipsum dolor sit amet</a></li>
+              <li id="nohr"><i class="fa fa-angle-right"></i><a href="#"> Lorem ipsum dolor sit amet</a></li>
             </ul>
 
-            <h3>NULLA LUCTUS ELEFEND</h3>
+            <h3 class="h3sidebar2">NULLA LUCTUS ELEFEND</h3>
               <ul class="sidebar2">
-                <li><i class="fa fa-angle-right"></i><a href="#"> Lorem ipsum dolor sit amet</a></li>
-                <li><i class="fa fa-angle-right"></i><a href="#"> Lorem ipsum dolor sit amet</a></li>
-                <li><i class="fa fa-angle-right"></i><a href="#"> Lorem ipsum dolor sit amet</a></li>
-                <li><i class="fa fa-angle-right"></i><a href="#"> Lorem ipsum dolor sit amet</a></li>
-                <li><i class="fa fa-angle-right"></i><a href="#"> Lorem ipsum dolor sit amet</a></li>
-                <li><i class="fa fa-angle-right"></i><a href="#"> Lorem ipsum dolor sit amet</a></li>
+                <li class="hr"><i class="fa fa-angle-right"></i><a href="#"> Lorem ipsum dolor sit amet</a></li>
+                <li class="hr"><i class="fa fa-angle-right"></i><a href="#"> Lorem ipsum dolor sit amet</a></li>
+                <li class="hr"><i class="fa fa-angle-right"></i><a href="#"> Lorem ipsum dolor sit amet</a></li>
+                <li class="hr"><i class="fa fa-angle-right"></i><a href="#"> Lorem ipsum dolor sit amet</a></li>
+                <li class="hr"><i class="fa fa-angle-right"></i><a href="#"> Lorem ipsum dolor sit amet</a></li>
+                <li id="nohr"><i class="fa fa-angle-right"></i><a href="#"> Lorem ipsum dolor sit amet</a></li>
               </ul>
 
         </div>
@@ -206,53 +214,68 @@
     <div class="basdepage">
     <div class="col-md-3">
       <div>
-        <h3>NULLA LUCTUS ELEFEND</h3>
-        <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus.</p>
+        <h3 class="margebasdepage">NULLA LUCTUS ELEFEND</h3>
+        <div class="bubble">
+
+          <blockquote>
+            <cite><p>Cras justo odio, dapibus ac facilisis in.Cras justo odio, dapibus ac facilisis in, egestas eget quam.</p></cite>
+            <footer><cite><p>John Smith</p></cite></footer>
+          </blockquote>
+        </div>
+        <div>
+        <img class="pic pull-right" src="/image/pic.png">
+        </div>
+
       </div>
     </div>
 
     <div class="col-md-3">
-      <h3>NULLA LUCTUS ELEFEND</h3>
+      <h3 class="margebasdepage">NULLA LUCTUS ELEFEND</h3>
       <div>
-        <p class="bold">Cras justo odio, dapibus ac facilisis in, egestas eget quam.</p>
-        <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus.</p>
+        <p class="bold">Cras justo odio, dapibus ac facilisis in.</p>
+        <p class="hr2">Cras justo odio, dapibus ac facilisis in, egestas eget quam.</p>
       </div>
       <div>
-        <p class="bold">Cras justo odio, dapibus ac facilisis in, egestas eget quam.</p>
-        <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus.</p>
+        <p class="bold">Cras justo odio, dapibus ac facilisis in.</p>
+        <p class="hr2">Cras justo odio, dapibus ac facilisis in, egestas eget quam.</p>
       </div>
       <div>
-        <p class="bold">Cras justo odio, dapibus ac facilisis in, egestas eget quam.</p>
-        <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus.</p>
+        <p class="bold">Cras justo odio, dapibus ac facilisis in.</p>
+        <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam.</p>
       </div>
     </div>
 
     <div class="col-md-3">
-      <h3>NULLA LUCTUS ELEFEND</h3>
-      <img class="media-object placement" alt="64x64" style="width: 80px; height: 80px;" src="image/pics08.jpg">
-      <img class="media-object placement" alt="64x64" style="width: 80px; height: 80px;" src="image/pics09.jpg">
-      <img class="media-object placement" alt="64x64" style="width: 80px; height: 80px;" src="image/pics10.jpg">
-      <img class="media-object placement" alt="64x64" style="width: 80px; height: 80px;" src="image/pics11.jpg">
-      <img class="media-object placement" alt="64x64" style="width: 80px; height: 80px;" src="image/pics12.jpg">
-      <img class="media-object placement" alt="64x64" style="width: 80px; height: 80px;" src="image/pics07.jpg">
-      <p><a href="#" class="btn btn-primary">More Collections</a></p>
+
+      <h3 class="margebasdepage">NULLA LUCTUS ELEFEND</h3>
+      <div>
+        <img class="media-object placement" alt="64x64" style="width: 80px; height: 80px;" src="image/pics08.jpg">
+        <img class="media-object placement" alt="64x64" style="width: 80px; height: 80px;" src="image/pics09.jpg">
+        <img class="media-object placement" alt="64x64" style="width: 80px; height: 80px;" src="image/pics10.jpg">
+        <img class="media-object placement" alt="64x64" style="width: 80px; height: 80px;" src="image/pics11.jpg">
+        <img class="media-object placement" alt="64x64" style="width: 80px; height: 80px;" src="image/pics12.jpg">
+        <img class="media-object placement" alt="64x64" style="width: 80px; height: 80px;" src="image/pics07.jpg">
+      </div>
+
+        <div><a href="#" class="btn btn-primary">More Collections</a></div>
 
     </div>
 
     <div class="col-md-3">
-      <h3>NULLA LUCTUS ELEFEND</h3>
+      <h3 class="margebasdepage">NULLA LUCTUS ELEFEND</h3>
       <div>
         <p class="bold">Cras justo odio, dapibus ac facilisis in, egestas eget quam.</p>
         <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus.</p>
         <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus.</p>
       </div>
     </div>
-    
+
     </div>
+
+  <footer class="footer">
+    <p id="footer">Cras justo odio, <a href="#" >DAPIBUS</a> ac facilisis in, egestas eget quam</p>
+  </footer>
   </div>
-
 </body>
-<footer>
-  <p>Cras justo odio, <a href="#" >DAPIBUS</a> ac facilisis in, egestas eget quam</p>
-</footer>
+
 </html>
